Replaced the 2-phase change system with time-delayed scheduling
-the 2-phase approach was quite complicated and was unable to solve closely related problems related to how much can be done in one tick (when the entity is moving, we need to apply a limit to make sure the client isn't cheating, etc)
-this new approach introduces the concept of a per-tick budget per entity and the TickRunner will only schedule changes which can fit within that budget (using a special "in progress" change to handle long-running tasks)
-this is simpler than the 2-phase approach (no special handling of "activity", etc) while also being able to handle cases such as movement limiting
-a downside of this is that other clients no longer see a long-running change "start", and "end" - instead, they only see nothing happen and then the "end".  This is really just for UI information, though, and will likely just be handled by allowing changes to set the entity's current animation state, or something (thus being more stateful, but more flexible)